fix pane scrollbar

--- a/style/index.less
+++ b/style/index.less
@@ -267,6 +267,7 @@ body > div {
 		& > div.content {
 			bottom: 0;
 			padding: 0 1rem;
+			width: ~`"calc(100% - @{panebackw})"`;
 		}
 		
 		&.toc {
